fix: update font size in Handsontable custom theme for improved readability

--- a/css/handsontable-custom-theme.css
+++ b/css/handsontable-custom-theme.css
@@ -7,7 +7,7 @@
     font-style: normal;
     font-variation-settings: wdth 100;
   }
-  --ht-font-size: 11px;
+  --ht-font-size: 13px;
   --ht-line-height: 20px;
   --ht-font-weight: 400;
   --ht-letter-spacing: 0;
